<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fabFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layoutFabMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/FabMain"
            android:layout_width="@dimen/normal_fab_w_h"
            android:layout_height="@dimen/normal_fab_w_h"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorPrimary"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_plus_white"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabAddNewRecipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AddNewRecipientLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:text="@string/fab_label_new_recipient"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/AddNewRecipientFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_file_white"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabAddRecipient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="170dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AddRecipientLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:text="@string/fab_label_existing_recipient"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/AddRecipientFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_file_white"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutFabAddFamily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="220dp"
        android:layout_marginEnd="@dimen/fab_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/AddFamilyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:text="@string/fab_label_family"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/AddFamilyFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_avatar_white"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>

    </LinearLayout>
</FrameLayout>